# mdm

mdm/: Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  results.xml
mdm/mdm/: logging_config.py  main.py  settings.py
mdm/mdm/database/: __init__.py  database.py
mdm/mdm/device/models/: device_request.py
mdm/mdm/device/routes/: api.py
mdm/mdm/device/schemas/: __init__.py  device.py
mdm/mdm/device/services/: device_service.py  websockets_service.py
mdm/mdm/migrations/: README.md  env.py
mdm/mdm/migrations/versions/: 2f1b9b953a33_initial_migration.py
mdm/tests/: conftest.py  test_mdm.py
