[tool.poetry]
name = "mdm"
version="0.0.1"
description = ""
authors = ["aleksanderchernov <alchernoff90@gmail.com>"]
readme = "README.md"

[project]
name = "mdm"
requires-python = ">=3.12,<3.13"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = { extras = ["standard"], version = "0.115.5" }
pydantic-settings = "^2.5.2"
fastapi-pagination = "0.12.32"
httpx = "^0.27.2"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
greenlet = "^3.1.1"
pytz = "^2024.2"
python-dateutil = "^2.9.0.post0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.8.1"
pip-audit = "^2.7.3"
pre-commit = "^4.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff]
ignore = ["F401"]

[tool.ruff.lint]
preview = true
unfixable = ["F401"]
extend-select = ["I", "UP006"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--junit-xml=results.xml"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
filterwarnings = ["ignore::pytest.PytestUnknownMarkWarning"]
